# server-v4

./: .gitignore  CMakeLists.txt  README  compile.sh  config.lua  newinstance.sh  query.lua  readme.md  startservers.sh  stopservers.sh
conf/: core.conf  core.lua  defaults.conf  defaults.lua  defaults_stalkR.conf  packages.lua  readme  server.conf
content/: README.md
docs/: Languages.txt  Menu.txt  README.txt  gendoc.sh
docs/Data/: ClassHierarchy.nd  ConfigFileInfo.nd  FileInfo.nd  IndexInfo.nd  PreviousMenuState.nd  PreviousSettings.nd  SymbolTable.nd
docs/output/: index.html
docs/output/index/: Classes.html  Files.html  Functions.html  Functions2.html  Functions3.html  General.html  General2.html  General3.html  General4.html  Properties.html  Variables.html
docs/output/javascript/: searchdata.js
docs/output/search/: ClassesA.html  ClassesB.html  ClassesC.html  ClassesI.html  ClassesM.html  ClassesN.html  ClassesO.html  ClassesS.html  ClassesT.html  ClassesU.html  ClassesV.html  FilesL.html  FilesS.html  FilesU.html  FunctionsA.html  FunctionsC.html  FunctionsD.html  FunctionsF.html  FunctionsH.html  FunctionsI.html  FunctionsJ.html  FunctionsK.html  FunctionsL.html  FunctionsM.html  FunctionsN.html  FunctionsO.html  FunctionsP.html  FunctionsQ.html  FunctionsR.html  FunctionsS.html  FunctionsSymbols.html  FunctionsT.html  FunctionsU.html  FunctionsV.html  FunctionsW.html  FunctionsY.html  GeneralA.html  GeneralC.html  GeneralD.html  GeneralE.html  (+40 more)
instance/1/: config.lua
instances/template/: files.lua  settings.template.lua
instances/template/script/: env.template.lua  init.lua
nbproject/: Package-Default.bash  Package-sauer_server.bash  configurations.xml  project.xml
script/: base_config.template.lua  env.lua  env.template.lua  init.lua  install.lua  newinstance.lua  startall.lua  stopall.lua
script/alphaserv/: baseconf.lua  init.lua  loader.lua  utils.lua
script/alphaserv/core/: acl.lua  api.lua  auth.lua  db.lua  general.lua  logging.lua  master.lua  messages.lua  package.lua  playervars.lua  settings.lua  settings2.lua  user.lua  wcp_connection.lua
script/alphaserv/oldmodules.ignore/: README  alternative_gamemode.lua  bandb.lua  banners.lua  editmute.lua  irc.lua  mapbattle.lua  maprotation.lua  mute.lua  pause.lua  playercmd.lua  stats.lua
script/as/: BaseConfigLoader.lua  auth.lua  baseModel.lua  baseconf.lua  component.lua  config.lua  core.lua  cubescript.lua  database.lua  event.lua  geoip.lua  init.lua  package.lua  server.lua  serverApplication.lua  serverexec.lua  spectator.lua  table.lua  team.lua  timer.lua  user.lua  userlist.lua
script/base/: init.lua
script/console/: newInstance.lua
script/hopmod_base/: event.lua  server.lua
script/language/: init.lua
script/master/: client.lua  connect.lua  init.lua  server.lua
script/package/: class.lua  plugin.lua  re.lua
script/stalkR/: init.lua  master.lua  network.lua
src/: CMakeLists.txt  findLUAJIT.cmake
src/engine/: server.cpp
src/fpsgame/: server.cpp
src/hopmod/: core_bindings.cpp  events.cpp  events.hpp  extapi.hpp  extserver.cpp  lua.cpp  startup.cpp
src/lpeg/: CMakeLists.txt
src/luajit/: -CMakeLists.txt  .CMakeLists.txt  CMakeLists.txt
src/luasql/: CMakeLists.txt
src/socket/: CMakeLists.txt
src/socket/src/: CMakeLists.txt
(+257 files in other folders)
